--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuepress/plugin-search": "2.0.0-beta.46",
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.46",
+    "vuepress-plugin-copy-code2": "2.0.0-beta.79",
     "vuepress-theme-hope": "^2.0.0-beta.75"
   }
 }
