--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.46",
     "vuepress-plugin-copy-code2": "2.0.0-beta.79",
+    "vuepress-plugin-pwa2": "2.0.0-beta.79",
     "vuepress-theme-hope": "^2.0.0-beta.75"
   }
 }
